--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/protein-slop.html">Protein Slop</a>
+    <ul>
+        <li><a href="recipes/protein-slop.html">Protein Slop</a></li>
+    </ul>
 </body>
 </html>
