Created two new recipe pages (blank).

--- a/index.html
+++ b/index.html
@@ -7,7 +7,21 @@
 <body>
     <h1>Odin Recipes</h1>
     <ul>
-        <li><a href="recipes/protein-slop.html">Protein Slop</a></li>
+        <li>
+            <a href="recipes/protein-slop.html">
+                Protein Slop
+            </a>
+        </li>
+        <li>
+            <a href="recipes/kale-salad.html">
+                Kale Salad
+            </a>
+        </li>
+        <li>
+            <a href="recipes/chocolate-rice-pudding.html">
+                Chocolate Rice Pudding
+            </a>
+        </li>
     </ul>
 </body>
 </html>
