Completed the kale salad page.

--- a/recipes/chocolate-rice-pudding.html
+++ b/recipes/chocolate-rice-pudding.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>Chocolate Rice Pudding</h1>
-    <img src="../images/choc-rice-pudding.jpeg">
+    <img src="../images/choc-rice-pudding.jpeg" alt="a bowl of chocolate rice pudding">
     <h2>Description</h2>
     <p>There is a Philippino desert dish known as Champorado, which this dish is similar to. It consists of white rice, milk, sweetener, and chocolate, essentially. This version of the recipe is particularly simple and can be prepared in a microwave, assuming you already have cooked white rice - which you must.</p>
     <p>The sweetener can be either honey or sugar. You can use dairy milk or plant milk according to your preferences. Use chocolate as dark as you like. I will write out the recipe using honey and almond milk (unsweetened), but feel free to substitute as desired.</p>
