--- a/recipes/kale-salad.html
+++ b/recipes/kale-salad.html
@@ -5,6 +5,25 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Kale Salad</h1>
+    <img src="../images//kale-salad.jpeg" alt="kale leaves in a bowl">
+    <h2>Description</h2>
+    <p>This is a very basic kale salad. It consists of washed kale leaves, red wine vinegar, and extra virgin olive oil. It is a basic way to consume this healthiest of vegetables, with enough oil to ensure absorption of the fat soluble vitamins present in kale.</p>
+    <p>I recommend going with organic kale. Kale is one of the dirty dozen, meaning non-organic kale typically is contaminated with pesticide residues. This is less of a problem when cooking with kale (the heat destroys the pesticide molecules), but more of a problem when the kale is to be eaten raw.</p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>Kale (organic preferred)</li>
+        <li>Red wine vinegar</li>
+        <li>Extra virgin olive oil</li>
+        <li>Pinch of salt (optional)</li>
+        <li>Pinch of oregano (optional)</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li>(Skip if using chopped kale) Separate the kale leaves from the stem and rinse the leaves with water. Place the leaves in your bowl after you rinse them. Prepare as much kale as you would like to eat.</li>
+        <li>Pour some extra virgin olive oil onto the kale leaves.</li>
+        <li>Pour some vinegar onto the kale leaves.</li>
+        <li>Add salt and oregano to the salad, if you want to.</li>
+    </ol>
 </body>
 </html>
