Added photo to index.html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <img src="images/main.jpg" alt="a man cooking in a kitchen">
     <ul>
         <li>
             <a href="recipes/protein-slop.html">
