created stylesheet and linked to it in all html docs

--- a/recipes/chocolate-rice-pudding.html
+++ b/recipes/chocolate-rice-pudding.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Chocolate Rice Pudding</title>
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
     <h1>Chocolate Rice Pudding</h1>
