literally no changes

--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Odin Recipes</title>
+    <title>Walter's Recipes</title>
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <img src="images/main.jpg" alt="a man cooking in a kitchen">
+    <h1>Walter's Recipes</h1>
+    <img id="main-img" src="images/main.jpg" alt="a man cooking in a kitchen">
     <ul>
         <li>
             <a href="recipes/protein-slop.html">
