--- a/recipes/kale-salad.html
+++ b/recipes/kale-salad.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
-    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="../styles/styles.css">
 </head>
 <body>
     <h1>Kale Salad</h1>
-    <img src="../images//kale-salad.jpeg" alt="kale leaves in a bowl">
+    <img class="fimg" src="../images//kale-salad.jpeg" alt="kale leaves in a bowl">
     <h2>Description</h2>
     <p>This is a very basic kale salad. It consists of washed kale leaves, red wine vinegar, and extra virgin olive oil. It is a basic way to consume this healthiest of vegetables, with enough oil to ensure absorption of the fat soluble vitamins present in kale.</p>
     <p>I recommend going with organic kale. Kale is one of the dirty dozen, meaning non-organic kale typically is contaminated with pesticide residues. This is less of a problem when cooking with kale (the heat destroys the pesticide molecules), but more of a problem when the kale is to be eaten raw.</p>
